# DataComp-Airflow

./: .gitignore  Dockerfile  README.md  docker-compose.yaml
dags/: minecraft_test.py  newspaper_wordfreq.py
plugins_dev/mc-notifier/: pyproject.toml
plugins_dev/mc-notifier/minecraft_provider/: __init__.py  protocol.py
plugins_dev/mc-notifier/minecraft_provider/hooks/: rcon.py
plugins_dev/mc-notifier/minecraft_provider/notifications/: minecraft.py
providers_presentation/: providers.typ
